force-app/main/default/objects/MatchPrepReport__c/MatchPrepReport__c.object-meta.xml
<CustomObject>
    <description>Rapport de préparation d&apos;un match (adversaire, plan recommandé, risques).</description>
    <label>Match Prep Report</label>
    <nameField>
        <displayFormat>MPR-{00000}</displayFormat>
        <label>Match Prep Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Prep Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>