force-app/main/default/objects/MatchPrepReport__c/fields/GeneratedAt__c.field-meta.xml
<CustomField>
    <fullName>GeneratedAt__c</fullName>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>