force-app/main/default/objects/MatchPrepReport__c/fields/GeneratedByAI__c.field-meta.xml
<CustomField>
    <fullName>GeneratedByAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated By AI</label>
    <type>Checkbox</type>
</CustomField>