force-app/main/default/objects/MatchPrepReport__c/fields/KeyPlayers__c.field-meta.xml
<CustomField>
    <fullName>KeyPlayers__c</fullName>
    <label>Key Players</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>