force-app/main/default/objects/MatchPrepReport__c/fields/Last5Form__c.field-meta.xml
<CustomField>
    <fullName>Last5Form__c</fullName>
    <label>Last 5 Form</label>
    <length>20</length>
    <type>Text</type>
</CustomField>