force-app/main/default/objects/MatchPrepReport__c/fields/Opponent__c.field-meta.xml
<CustomField>
    <fullName>Opponent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opponent</label>
    <referenceTo>Opponent__c</referenceTo>
    <relationshipLabel>Match Prep Reports</relationshipLabel>
    <relationshipName>MatchPrepReports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>