force-app/main/default/objects/MatchPrepReport__c/fields/RecommendedPlan__c.field-meta.xml
<CustomField>
    <fullName>RecommendedPlan__c</fullName>
    <label>Recommended Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>