force-app/main/default/objects/MatchPrepReport__c/validationRules/ConfidenceScoreMax100.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfidenceScoreMax100</fullName>
    <active>true</active>
    <errorConditionFormula>ConfidenceScore__c &gt; 100</errorConditionFormula>
    <errorMessage>Confidence score cannot exceed 100.</errorMessage>
</ValidationRule>